//
//  AutomationConstants.swift
//  TrailsidePlayground
//
//  Created by Yuchen Nie on 4/8/19.
//  Copyright © 2019 Yuchen Nie. All rights reserved.
//

import Foundation

public struct AutomationConstants {
    public enum MovieSearchView:String {
        case MovieResultCell = "MovieResultCell"
    }
    
    public enum MovieDetailsView:String {
        case FavoritesButton = "FavoritesButton"
    }
}
